--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,22 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email">Email</string>
+    <string name="login">Login</string>
+    <string name="cancel">Cancel</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm</string>
+    <string name="last_name">Last Name</string>
+    <string name="first_name">First Name</string>
+    <string name="not_registered">Not registered?</string>
+    <string name="already_registered">Already registered?</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
+    <string name="title_activity_new_location">NewLocationActivity</string>
+    <string name="save">Save</string>
+    <string name="name_optional">Name (optional)</string>
+    <string name="coordinates">Coordinates</string>
+    <string name="update">Update</string>
+    <string name="longitude">Longitude</string>
+    <string name="latitude">Latitude</string>
 </resources>
